- Auto-trailing slashes for request and endpoint paths.
- Request::getType() for getting request type.
- Router::add(...) for adding endpoints and subrouters.
- Bee::buildProjectPath() for building dynamic and true sanitized paths inside a site project.
- ProjectFolderType enum for specifying project folder types.
- JS Lib.uploadFile() for handling file AJAX requests.

#### Changed
- DataSlave now uses regex filtering for injected strings (table, cols, conditions and orderBy).
- Request now sanitizes data in different levels of severity.
- MailSlave::getMailTemplate() now uses realpath() to prevent directory traversal attacks.
- MailSlave::setMailerAttachments() now uses realpath() to prevent directory traversal attacks.
- Type enums have been relocated to a new namespace.
- Skeleton has been updated to account for recent changes.
- Template component now allows for nested setters.
- DataType enum now supports 55 data types.
- Router factory now only specifies middleware type. 
- Router now uses O(1) hash map lookup for endpoint matching.
- Collection now stores values internally with key-based O(1) lookup.
- AuthSlave now calls session_start() only when needed, improving performance.
- DataSlave now supports persistent PDO connections for better performance.
- Types now live inside a new namespace. \FastRaven\Types
- Template:flex now supports fragments.
- Request now supports file upload via JS Lib.uploadFile().

#### Fixed
- Logs are not being stored inside storage directory.
- AuthWorker::autologin() produces a timing attack vulnerability.
- ValidationWorker::phone() returns false for a valid 9-digit phone number.
- Mail component has not initialized variables.
- CDN exceptions are not being handled correctly.
- Headers are not being sent on unauthorized site access.
- Shared Memory .lock files are not being deleted.
- CSRF_TOKEN is not being injected into the main.php template.
- CSRF_TOKEN is not being sent through FormData requests.

#### Removed